# langflow

./: .gitignore  BRAIN.md  DECISIONS.md  HANDOVER.md  LICENSE  README.md  ROADMAP.md  SESSION.md  index.html  package-lock.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/core/: config.rs  database.rs  hotkey.rs  ime.rs  inline_type.rs  memory.rs  mod.rs
src-tauri/src/lang_pack/: downloader.rs  mod.rs
src-tauri/src/ocr/: capture.rs  mod.rs  win_ocr.rs
src-tauri/src/translation/: engine.rs  local_onnx.rs  mod.rs  online_api.rs
src/components/: TitleBar.tsx
src/windows/: FloatingPopup.tsx  MainWindow.tsx  ScreenshotOverlay.tsx  SettingsWindow.tsx
